# structure-aware-fuzzing

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_user_v01.rs
models/: Cargo.toml
models-afl-fuzz-target/: Cargo.toml
models-afl-fuzz-target/in/: input_user_v01
models-afl-fuzz-target/src/: main.rs
models/src/: lib.rs
