[package]
name = "models-afl-fuzz-target"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", features = ["arbitrary"]}

afl = { version = "0.15.5" }
arbitrary = { version = "1.3.2", features = ["derive"]}

[workspace]
members = ["."]

[profile.release]
lto = "fat"
debug = true
strip = false
opt-level = 3
panic = "abort"
