[package]
name = "models"
authors.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
serde = { workspace = true }

arbitrary = { workspace = true, optional = true }
